2005-04-30  Al Riddoch  <alriddoch@zepler.org>

	* acinclude.m4: Remove unused CPPUnit macro, and add required
	  pkg-config macro.

2005-04-30  Al Riddoch  <alriddoch@zepler.org>

	* NEWS: Add a pending news item for the upcoming release.

	* configure.ac: Update autoconf usage. Remove MERCATOR_VERSION.

	* tests/Makefile.am: Add test*.pgm to the DISTCLEANFILES so that
	  distcheck runs cleanly.

2005-04-23  Al Riddoch  <alriddoch@zepler.org>

	* mercator.spec.in: Remove some unnecessary Requires lines from the
	  rpm spec.

2005-04-21  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/TileShader.cpp: Fix shader so it allocates surface store
	  before shading, and does not attempt to shade subsurfaces that will
	  contain no data.

2005-04-21  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/TileShader.h, Mercator/TileShader.cpp: Implement shading
	  the tile buffer, and method required to add sub shaders.

	* tests/testTileShader.cpp: Unit test for TileShader.

2005-04-21  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.h: Fix documentation comment now that member
	  has been changed.

	* Mercator/TileShader.h, Mercator/TileShader.cpp:
	  Starting point for new class to handle determining what the
	  surface is made of.

2005-04-12 James Turner <james@worldforge.org>

	* Mercator/Terrain.cpp: when adding an area to a segment, check if
	  any shaders now intersect the segment, and if so, add a surface for
	  them.
	  
	* Mercator/Terrain.cpp: re-order Segment building code in setBasePoint,
	  so areas are added before surfaces.
	  
	* Mercator/Segment.cpp, Mercator/Segment.h: factor segment invalidation
	  into a helper method, and invalidate segments when an Area is added
	  to a Segment.

	* Mercator/Area.cpp: remove debug code.

2005-04-12  Al Riddoch  <alriddoch@zepler.org>

	* tests/testShader.cpp: Check if a shader being tested intersects with
	  a given Segment before attempting to populate it.

2005-04-12  Al Riddoch  <alriddoch@zepler.org>
