@@ -1,3 +1,8 @@
+2005-05-05  Al Riddoch  <alriddoch@zepler.org>
+
+	* Mercator/Segment.h: Add accessor for segment position on the
+	  basepoint grid.
+
 2005-04-30  Al Riddoch  <alriddoch@zepler.org>
 
 	* acinclude.m4: Remove unused CPPUnit macro, and add required
